fix bench02 runtime exceptions