@@ -1,5 +1,6 @@
 package br.unb.cic.mop.bench02.predictablekeystorepassword;
 
+import java.io.File;
 import java.io.IOException;
 import java.net.URL;
 import java.security.KeyStore;
@@ -18,8 +19,8 @@ public class PredictableKeyStorePasswordBBCase1 {
     public void go() throws KeyStoreException, IOException, CertificateException, NoSuchAlgorithmException {
         String type = "JKS";
         KeyStore ks = KeyStore.getInstance(type);
-        cacerts = new URL("https://www.google.com");
-        String defaultKey = "changeit";
+        cacerts = new File("./target/test-classes/testInput-ks").toURI().toURL(); // URL("https://www.google.com");
+        String defaultKey = "password";
         ks.load(cacerts.openStream(), defaultKey.toCharArray());
     }
 
